--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,12 @@
     <link rel="stylesheet" href="{{ "/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/blog.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-54116758-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
