--- a/css/blog.css
+++ b/css/blog.css
@@ -211,7 +211,7 @@ pre, .highlight pre, .highlight {
 
   #sidebar-menu li, #sidebar-menu li a {
     display: inherit; } }
-@media screen and (min-width: 35.5em) {
+@media screen and (max-width: 35.5em) {
   .sm-hide {
     display: none !important; } }
 #prf-info {
