--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -293,7 +293,7 @@ pre, .highlight pre, .highlight {
     }
 }
 
-@media screen and (min-width: 35.5em) {
+@media screen and (max-width: 35.5em) {
 
   .sm-hide {
     display: none !important;
