--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,44 @@
     <link rel="stylesheet" href="{{ "/css/blog.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
     <script>
+
+      ;(function (w, d) {
+
+        var isIE = /MSIE/i.test(w.navigator.userAgent),
+            parts = ['nick', 'jacob', 'com', 'me', 'mailto'],
+            addr = parts[3] + '\u0040' + parts[0] + parts[1] + '.' + parts[2],
+            evt = isIE ? 'onreadystatechange' : 'DOMContentLoaded';
+
+        function __main__() {
+          [].slice.call(d.querySelectorAll('span.email')).forEach(function (s) {
+            var internal = d.createElement('A');
+            internal.href = parts[4] + '://' + addr;
+            internal.textContent = addr;
+            s.appendChild(internal);
+          });
+        }
+
+        (d.addEventListener || d.attachEvent)(evt, function (e) {
+
+          if (isIE) {
+            if (d.readyState === 'complete') {
+              d.detachEvent(evt, arguments.callee);
+            }
+          }
+
+          else {
+            d.removeEventListener(evt, arguments.callee, false);
+          }
+
+          __main__();
+        });
+
+
+
+      }(window, window.document));
+
+    </script>
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
