--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
       <div class='' class='prf-info'>
         <h1 class="brand-title"><a href='/'>Nick Jacob</a></h1>
       </div>
-        <h2 class='brand-tagline'>coder, programmer... me [at] myname.com</h2>
+      <h2 class='brand-tagline'>beep me reach me <span class='email'></span><h2>
         <nav class="nav">
             <div class='pure-menu pure-menu-open' id='sidebar-menu'>
               <ul>
