--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel='author' href='http://google.com/+NickJacobdotcom'/>
+
+    <meta name='keywords' content='nick jacob nickjacob'>
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
